# ererrea2

./: CMakeLists.txt  HOW_TO_USE_SANE_COMPILER.txt  easy_build.sh  exe_build.bat  main.cpp  oldmain.cpp  sane_build.bat
include/shaders/: default.frag  default.vert
libs/FastNoise2/include/FastNoise/Generators/: Simplex.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw-3.4/: CMakeLists.txt
libs/stb/: CMakeLists.txt
resources/shaders/: default.frag  default.vert
src/: 3dListUtil.h  gameState.cpp  gameState.h  glDebugLogger.cpp  glDebugLogger.h  otherTestScene.cpp  otherTestScene.h  renderer.cpp  renderer.h  scene.cpp  scene.h  testAlertBeep.cpp  testAlertBeep.h  testScene.cpp  testScene.h  vertexObjectGenerators.cpp  vertexObjectGenerators.h
src/core/: gameState.cpp  gameState.h  glDebugLogger.cpp  inputManager.cpp  inputManager.h  renderer.cpp  renderer.h  scene.h  testAlertBeep.cpp  testAlertBeep.h  vertexObjectGenerators.cpp  vertexObjectGenerators.h
src/ereacore/: BlockRenderer.cpp  BlockRenderer.h  Direction.h  PlayerWorldInteraction.cpp  PlayerWorldInteraction.h  UnitRenderer.cpp  UnitRenderer.h  badNoise.cpp  badNoise.h  chunk.cpp  chunk.h  ereaGameScene.cpp  ereaGameScene.h  keybinds.cpp  keybinds.h  terrainGenerator.cpp  terrainGenerator.h  unit.h
src/test/: otherTestScene.cpp  otherTestScene.h
src/uicore/: uiObject.cpp  uiObject.h
